  suite factories: ZopeDocTestSuite, ZopeDocFileSuite, FunctionalDocTestSuite,
  and FunctionalDocFileSuite.
- Removed warnhook.py, we now use the one from ZODB.tests.
- Removed doctest.py, we now use the one from zope.testing.
- Removed dochttp.py + test, we now use the one from zope.app.tests.
- ZopeLite now takes care not to monkey patch an already started Zope.
- PortalTestCase no longer calls _refreshSkinData() as CMF is smart enough
  now (and CMF 1.5+ does not work that way anyway).
- Fixed a bug where using sessions in sandboxed (functional) tests would cause
  connection pool depletion and subsequent hangs. Thanks to Balazs Ree.

0.9.6
- Dropped support for Zope 2.5 as it lacks the setSecurityManager() API.
- Moved interfaces from doc section to interfaces.py module.
- Test classes now assert their interfaces.
- Refactored security interfaces to IZopeSecurity and IPortalSecurity.
- Added a class diagram to the doc section.
- setRoles() and setPermissions() no longer insist on ListType arguments
  but now accept lists, tuples, and strings.
- getRoles() and getPermissions() are no longer part of the security API
  because of YAGNI.
- Added getHeader() and getCookie() accessors to the response wrapper
  used in functional tests.
- publish() now accepts an optional 'stdin' argument, allowing to pass
  the input stream for POST and PUT requests.
- runalltests.py now supports a '-R' (recursive) command line option.

0.9.4 (not released)
- Backported functional doc tests from Zope 3.
- Included a copy of doctest.py from Zope 3 (which is copied from
  Python2.4 CVS). It will be removed when we start requiring Python2.4.
- Added dochttp.py script from Zope 3, which is used to convert
  tcpwatch.py output to functional doc tests.
- Added warnhook.py from ZODB. It is used to capture the output of
  warnings.warn() calls.
- Added missing 'user_password' constant.
- Many thanks to Sidnei da Silva!

0.9.2
- Introduced new base.TestCase class which contains the bare-