@@ -8,8 +8,9 @@
 - Removed doctest.py, we now use the one from zope.testing.
 - Removed dochttp.py + test, we now use the one from zope.app.tests.
 - ZopeLite now takes care not to monkey patch an already started Zope.
-- PortalTestCase no longer calls _refreshSkinData() as CMF is smart enough
-  now (and CMF 1.5+ does not work that way anyway).
+- PortalTestCase.setUp() no longer calls _refreshSkinData() as CMF is smart
+  enough now.
+- Fixed _refreshSkinData() helper to work with CMF >= 1.5.
 - Fixed a bug where using sessions in sandboxed (functional) tests would cause
   connection pool depletion and subsequent hangs. Thanks to Balazs Ree.
 
